Modified USSD field name in rename_dict

--- a/sc_maup_congress.ipynb
+++ b/sc_maup_congress.ipynb
@@ -19518,8 +19518,8 @@
     "               'P0020007': 'NH_AMIN', 'P0020008': 'NH_ASIAN', 'P0020009': 'NH_NHPI', 'P0020010': 'NH_OTHER',\n",
     "               'P0020011': 'NH_2MORE', 'P0040001': 'VAP', 'P0040002': 'HVAP', 'P0040005': 'WVAP', 'P0040006': 'BVAP',\n",
     "               'P0040007': 'AMINVAP', 'P0040008': 'ASIANVAP', 'P0040009': 'NHPIVAP', 'P0040010': 'OTHERVAP',\n",
-    "               'P0040011': '2MOREVAP', 'G20PREDBID': 'G20PRED', 'G20PRERTRU': 'G20PRER', 'G20USSDHAR': 'G20USSD',\n",
-    "               'G20USSRGRA': 'G20USSR'}"
+    "               'P0040011': '2MOREVAP', 'G20PREDBID': 'G20PRED', 'G20PRERTRU': 'G20PRER', 'G20USSDDUR': 'G20USSD',\n",
+    "               'G20USSRCUR': 'G20USSR'}"
    ]
   },
   {
