--- a/SC_randomwalk_new.ipynb
+++ b/SC_randomwalk_new.ipynb
@@ -41,6 +41,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "73669202c5a2ee01"
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "70f4f948-d443-4e70-aba9-9010c43e7776",
